# oil-pool

./: .clippy.toml  .gitignore  AGENT_JOURNAL.md  Cargo.toml  PLAN.md  bacon.toml  build.rs  mise.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: rust.yml
.mise/tasks/: dev  dev-bg  dev-status  dev-stop  setup  verify  verify-check
config/: debug.toml  default.toml  release.toml
src/: build_info.rs  config.rs  lib.rs
src/app/: config.rs  debug_ui.rs  ellipse_renderer.rs  geometry.rs  line_renderer.rs  mod.rs  renderer.rs  runner.rs  shader_system.rs  window.rs
src/app/input/: collector.rs  context.rs  events.rs  game_handler.rs  handler.rs  mod.rs  state.rs
src/app/renderer/: command.rs  context.rs  mod.rs  sim.rs  viewport.rs
src/health/: check.rs  mod.rs  reporter.rs  runner.rs
src/health/checks/: build_info.rs  config.rs  debug_ui.rs  egui_context.rs  graphics_backend.rs  mod.rs  system_info.rs  world.rs
src/sim/: camera.rs  leaf.rs  mod.rs  tictactoe.rs
tests/: health_check.rs
