[package]
name = "oil-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
aseprite = "0.1.3"
asset-importer = "0.4.0"
assets_manager = "0.13.5"
axum = "0.8.7"
bindgen = "0.72.1"
bitflags = "2.10.0"
blend = "0.8.0"
bonsai-bt = "0.10.0"
bvh = "0.12.0"
bytemuck = "1.24.0"
bytes = "1.11.0"
cached = "0.56.0"
cbindgen = "0.29.2"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
collider = "0.3.1"
color-eyre = "0.6.5"
colored = "3.0.0"
config = "0.15.19"
const_format = "0.2.35"
cross = "0.2.5"
crossterm = "0.29.0"
directories = "6.0.0"
dirs = "6.0.0"
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
enum-map = { version = "2.7.3", features = ["serde"] }
euclid = "0.22.11"
euler = "0.4.1"
eyre = "0.6.12"
futures = "0.3.31"
glam = "0.30.9"
gltf = "1.4.1"
heck = "0.5.0"
http = "1.3.1"
hyper = "1.8.1"
ignore = "0.4.25"
image = "0.25.9"
indexmap = "2.12.1"
inquire = "0.9.1"
itertools = "0.14.0"
keyframe = "1.1.1"
lettre = "0.11.19"
madsim = "0.2.34"
memmap2 = "0.9.9"
mint = "0.5.9"
nalgebra = "0.34.1"
ndarray = "0.17.1"
noise = "0.9.0"
notify = "8.2.0"
num-traits = "0.2.19"
obj-rs = "0.7.4"
ordered-float = "5.0"
palette = "0.7.6"
paste = "1.0.15"
pathfinding = "4.14.0"
petgraph = "0.8.3"
prost = "0.14.1"
quote = "1.0.42"
rand = "0.9.2"
rectangle-pack = "0.4.2"
reqwest = "0.12.24"
rfd = "0.15.4"
rgb = "0.8.52"
rodio = "0.21.1"
roots = "0.0.8"
ropey = "1.6.1"
semver = "1.0.27"
serde = "1.0.228"
similar = "2.7.0"
sprs = "0.11.4"
sqlx = "0.8.6"
syn = "2.0.111"
sysinfo = "0.37.2"
tabled = "0.20.0"
tempfile = "3.23.0"
termcolor = "1.4.1"
textwrap = "0.16.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
typed-builder = "0.23.2"
url = "2.5.7"
uuid = "1.18.1"
validator = "0.20.0"
walkdir = "2.5.0"
wgpu = "27.0.1"
whoami = "1.6.1"
winit = "0.30.12"
zip = "6.0.0"
zstd = "0.13.3"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc"] }
vergen-gitcl = "1.0.1"
